fix(server): enable luau by detection only and have supervisor pass FFM/luau flags